<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:scrollbars="vertical"
            android:text="@string/user_info_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/welcome_user_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/email_profile_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Some information about the user"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/pets_profile_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Some information about the user"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/lost_posts_profile_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Some information about the user"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/found_posts_profile_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Some information about the user"
            android:layout_margin="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/edit_info_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/buttonsColor"
                android:textColor="@color/white"
                android:text="@string/edit_info_button" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/error"
                android:text="@string/logoutButton"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/delete_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/navbarColor"
                android:text="@string/delete_account_label"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>